# pylisp

./: .gitignore  .pylintrc  .python-version  README.md  pyproject.toml  run_mypy.py  test_mypy_api.py
.github/: dependabot.yml
.github/workflows/: build_docs.yml  python-app.yml  test.yml
pylisp/: environment.py  eval.py  main.py  parse.py  repl.py
tests/: test_eval.py  test_parse.py  test_repl.py
