[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]


[project]
name = "lisp-python"
version = "0.0.1"
authors = [
  { name="Fredrik Meyer", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
