[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]


[project]
name = "lisp-python"
version = "0.0.1"
authors = [
  { name="Fredrik Meyer", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
  "pytest==7.2.0",
  "flake8==6.0.0",
  "pylint==2.15.9"
]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.pylint]
disable = "import-error"
fail-under = "9"

[tool.pyright]
include = ["pylisp"]
