[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]


[project]
name = "lisp-python"
version = "0.0.1"
authors = [
  { name="Fredrik Meyer", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "ruff==0.9.3",
  "mypy==1.14.1",
  "pytest-cov==6.0.0",
  "black==24.10.0"
]

[project.urls]
"Homepage" = "https://github.com/FredrikMeyer/pylisp"

[project.scripts]
plsp = "pylisp.repl:plsp"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.black]

[tool.pyright]
#strict = ["pylisp"]
